--- a/test/index.html
+++ b/test/index.html
@@ -30,7 +30,9 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         'continuing-request-test.html',
         'continuing-request-test.html?dom=shadow',
         'response-data-test.html',
-        'response-data-test.html?dom=shadow'
+        'response-data-test.html?dom=shadow',
+        'dirty-status-test.html',
+        'dirty-status-test.html?dom=shadow'
       ]);
     </script>
   </body>
