Fix: Fixing unobserving event.

--- a/request-panel.html
+++ b/request-panel.html
@@ -460,7 +460,7 @@ Custom property|Description|Default
     _detachListeners: function(node) {
       this.unlisten(node, 'continue-request', '_continueRequestHandler');
       this.unlisten(node, 'report-response', '_reportRequestHandler');
-      this.listen(node, 'resend-auth-request', '_resend');
+      this.unlisten(node, 'resend-auth-request', '_resend');
     },
 
     ready: function() {
