Update: Adding eventsTarget property propagation.

--- a/request-panel.html
+++ b/request-panel.html
@@ -190,7 +190,8 @@ Custom property|Description|Default
         method="{{request.method}}"
         payload="{{request.payload}}"
         url="{{request.url}}"
-        xhr-extension="[[xhrExtension]]"></request-editor>
+        xhr-extension="[[xhrExtension]]"
+        events-target="[[eventsTarget]]"></request-editor>
       <template is="dom-if" if="[[loading]]">
         <paper-progress indeterminate></paper-progress>
       </template>
