--- a/request-panel.html
+++ b/request-panel.html
@@ -190,6 +190,7 @@ Custom property|Description|Default
         method="{{request.method}}"
         payload="{{request.payload}}"
         url="{{request.url}}"
+        request-actions="{{request.actions}}"
         xhr-extension="[[xhrExtension]]"
         events-target="[[eventsTarget]]"></request-editor>
       <template is="dom-if" if="[[loading]]">
