--- a/test/dirty-status-test.html
+++ b/test/dirty-status-test.html
@@ -19,7 +19,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
     <script src="../../iron-test-helpers/mock-interactions.js"></script>
 
     <link rel="import" href="../request-panel.html">
-    <link rel="import" href="demo-transport.html">
+    <link rel="import" href="../demo/demo-transport.html">
   </head>
   <body>
 
