--- a/test/index.html
+++ b/test/index.html
@@ -23,6 +23,8 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       WCT.loadSuites([
         'basic-test.html',
         'basic-test.html?dom=shadow',
+        'request-logic-test.html',
+        'request-logic-test.html?dom=shadow',
         'basic-transport-test.html',
         'basic-transport-test.html?dom=shadow',
         'extra-delayed-transport-test.html',
