--- a/request-logic.html
+++ b/request-logic.html
@@ -169,8 +169,8 @@ Polymer({
    */
   _beforeProcessVariables: function(request) {
     return new Promise((resolve, reject) => {
-      this.cache = undefined;
-      this.context = undefined;
+      this._evalElement.cache = undefined;
+      this._evalElement.context = undefined;
       this._evalElement._processBeforeRequest(request, resolve, reject);
     })
     .then(request => {
