Update: Updated request editor with authorization settings.

--- a/demo/index.html
+++ b/demo/index.html
@@ -15,9 +15,24 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
   <meta name="viewport" content="width=device-width, minimum-scale=1.0, initial-scale=1, user-scalable=yes">
 
   <title>request-panel demo</title>
-
+  <script>
+  if (location.search.indexOf('response_type') !== -1 && location.search.indexOf('redirect_uri') !== -1) {
+    // OAUTH DEMO
+    var p = new URLSearchParams(location.search);
+    var state = p.get('state');
+    var type = p.get('response_type');
+    var red = p.get('redirect_uri');
+    red += '?state=' + state;
+    if (type === 'token') {
+      red += '&access_token=ya.12345.asdfghh';
+    } else {
+      red += '&code=12345Zasdfghh';
+    }
+    location.href = red;
+  }
+  </script>
   <script src="../../webcomponentsjs/webcomponents-lite.js"></script>
-
+  <link rel="import" href="api-console-styles.html">
   <link rel="import" href="../../iron-demo-helpers/demo-pages-shared-styles.html">
   <link rel="import" href="../../iron-demo-helpers/demo-snippet.html">
   <link rel="import" href="../../variables-evaluator/variables-evaluator.html">
@@ -27,7 +42,8 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
   <link rel="import" href="../../paper-toast/paper-toast.html">
   <link rel="import" href="../../paper-toggle-button/paper-toggle-button.html">
   <link rel="import" href="../../request-hooks-logic/request-hooks-logic.html">
-
+  <link rel="import" href="../../oauth-authorization/oauth2-authorization.html">
+  <link rel="import" href="../../oauth-authorization/oauth1-authorization.html">
   <link rel="import" href="../request-panel.html">
   <link rel="import" href="demo-transport.html">
 
@@ -55,7 +71,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
     <h3>The `request-panel`</h3>
     <demo-snippet>
       <template is="dom-bind" id="demo1">
-        <request-panel request="[[request]]" xhr-extension></request-panel>
+        <request-panel request="[[request]]" oauth2-redirect-uri="[[oauth2RedirectUri]]"></request-panel>
         <paper-toggle-button on-tap="_toggleTyped">Request is saved request in the datastore</paper-toggle-button>
       </template>
     </demo-snippet>
@@ -64,6 +80,8 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
   <url-history-saver></url-history-saver>
   <demo-transport></demo-transport>
   <variables-manager></variables-manager>
+  <oauth2-authorization></oauth2-authorization>
+  <oauth1-authorization></oauth1-authorization>
   <paper-toast id="transportToast" text="transport-request event handled"></paper-toast>
   <paper-toast id="requestAbort" text="Request abort event detected"></paper-toast>
   <paper-toast id="clearToast" text="Clear request state detected"></paper-toast>
@@ -126,6 +144,9 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       }
       scope.request = r;
     };
+    var redirectUrl = location.href.replace(/request-panel\/demo\/(index\.html)?/,
+        'oauth-authorization/oauth-popup.html');
+    scope.oauth2RedirectUri = redirectUrl;
     var latestActions;
     window.addEventListener('report-response', function(e) {
       if (!latestActions || !latestActions.length) {
