--- a/request-panel.html
+++ b/request-panel.html
@@ -192,6 +192,8 @@ Custom property|Description|Default
         payload="{{request.payload}}"
         url="{{request.url}}"
         request-actions="{{request.actions}}"
+        auth-settings="{{request.authSettings}}"
+        oauth2-redirect-uri="[[oauth2RedirectUri]]"
         xhr-extension="[[xhrExtension]]"
         events-target="[[eventsTarget]]"></request-editor>
       <template is="dom-if" if="[[loading]]">
@@ -442,7 +444,13 @@ Custom property|Description|Default
         value: false
       },
       // Last generated ID for the request.
-      lastRequestId: String
+      lastRequestId: String,
+      /**
+       * Redirect URL for the OAuth2 authorization.
+       * If can be also set by dispatching `oauth2-redirect-url-changed`
+       * with `value` property on the `detail` object.
+       */
+      oauth2RedirectUri: String
     },
 
     listeners: {
