--- a/request-panel.html
+++ b/request-panel.html
@@ -192,7 +192,7 @@ Custom property|Description|Default
         payload="{{request.payload}}"
         url="{{request.url}}"
         request-actions="{{request.actions}}"
-        auth-settings="{{request.authSettings}}"
+        auth-settings="{{request.auth}}"
         oauth2-redirect-uri="[[oauth2RedirectUri]]"
         xhr-extension="[[xhrExtension]]"
         events-target="[[eventsTarget]]"></request-editor>
