New: Added queryModel support.

--- a/request-panel.html
+++ b/request-panel.html
@@ -193,6 +193,7 @@ Custom property|Description|Default
         url="{{request.url}}"
         request-actions="{{request.actions}}"
         auth-settings="{{request.auth}}"
+        query-model="{{request.queryModel}}"
         oauth2-redirect-uri="[[oauth2RedirectUri]]"
         xhr-extension="[[xhrExtension]]"
         events-target="[[eventsTarget]]"></request-editor>
