--- a/test/request-logic-test.html
+++ b/test/request-logic-test.html
@@ -31,16 +31,28 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
     </test-fixture>
 
     <script>
-    /* global fixture, assert */
-    var request = {
-      url: 'https://domain.com',
-      headers: 'content-length: 0\nx-test: true',
-      method: 'GET',
-      actions: [{
-        source: 'response.headers.status',
+    /* global fixture, assert, sinon */
+    const request = {
+      url: 'https://domain.com/${test1}',
+      headers: 'content-length: 0\nx-test: true\nx-var: ${test2}',
+      method: 'POST',
+      payload: '${test1}',
+      responseActions: [{
+        source: 'response.headers.status.${test4}',
         action: 'assign-variable',
-        destination: 'myVar'
-      }]
+        destination: 'myVar-${test3}'
+      }],
+      requestActions: {
+        variables: [{
+          enabled: true,
+          value: 'test-value',
+          variable: 'test-var'
+        }, {
+          enabled: true,
+          variable: 'v2',
+          value: '${test1}'
+        }]
+      }
     };
     suite('basic', function() {
       var element;
@@ -103,6 +115,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 
         test('Removes payload for GET', function() {
           element.request.payload = 'test';
+          element.request.method = 'GET';
           result = element._prepareEventRequest();
           assert.isUndefined(result.payload);
         });
@@ -238,6 +251,149 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         assert.notEqual(result.a, 'a1');
         assert.notEqual(result.b, 'a2');
         assert.notEqual(result.c, 'a3');
+      });
+    });
+
+    suite('Pre request variables set', function() {
+      var result;
+      var element;
+      setup(function() {
+        element = fixture('basic')[0];
+      });
+      const contextFactory = function(e) {
+        e.preventDefault();
+        e.detail.value = [{
+          variable: 'test1',
+          value: 'value1',
+          enabled: true
+        }, {
+          variable: 'test2',
+          value: 'value2 ${test1}',
+          enabled: true
+        }, {
+          variable: 'test3',
+          value: 'value3 ${test4}',
+          enabled: true
+        }, {
+          variable: 'test4',
+          value: 'value4',
+          enabled: true
+        }, {
+          variable: 'test5',
+          value: 'value5',
+          enabled: false
+        }];
+      };
+      suiteSetup(function() {
+        window.addEventListener('variable-list', contextFactory);
+      });
+      suiteTeardown(function() {
+        window.removeEventListener('variable-list', contextFactory);
+      });
+
+      suite('_preparePreRequestVariables()', function() {
+
+        test('Returns Promise', function() {
+          result = element._preparePreRequestVariables(request);
+          assert.typeOf(result.then, 'function');
+        });
+
+        test('Evaluates variables', function() {
+          return element._preparePreRequestVariables(request)
+          .then(function(result) {
+            assert.equal(result.v2, 'value1');
+          });
+        });
+
+        test('Contains list of variables', function() {
+          return element._preparePreRequestVariables(request)
+          .then(function(result) {
+            assert.equal(result['test-var'], 'test-value');
+            assert.equal(result.v2, 'value1');
+          });
+        });
+
+        test('Contains two items', function() {
+          return element._preparePreRequestVariables(request)
+          .then(function(result) {
+            assert.lengthOf(Object.keys(result), 2);
+          });
+        });
+
+        test('Returns undefined when no actions', function() {
+          return element._preparePreRequestVariables({})
+          .then(function(result) {
+            assert.isUndefined(result);
+          });
+        });
+
+        test('Returns undefined when no variables in actions', function() {
+          return element._preparePreRequestVariables({
+            requestActions: {}
+          })
+          .then(function(result) {
+            assert.isUndefined(result);
+          });
+        });
+      });
+
+      suite('_notifyVariablesChange()', function() {
+        const vars = {
+          v1: 't1',
+          v2: '${test1}'
+        };
+        setup(function() {
+          element = fixture('basic')[0];
+        });
+
+        test('Fires event when variable to be set', function() {
+          var spy = sinon.spy();
+          element.addEventListener('variable-update-action', spy);
+          element._notifyVariablesChange(vars);
+          assert.equal(spy.callCount, 2);
+        });
+
+        test('Event detail contains valid properties', function() {
+          var eventData;
+          element.addEventListener('variable-update-action', function clb(e) {
+            element.removeEventListener('variable-update-action', clb);
+            eventData = e.detail;
+          });
+          element._notifyVariablesChange(vars);
+          assert.equal(eventData.variable, 'v1');
+          assert.equal(eventData.value, 't1');
+        });
+
+        test('Does not fire events for empty object', function() {
+          var spy = sinon.spy();
+          element.addEventListener('variable-update-action', spy);
+          element._notifyVariablesChange({});
+          assert.isFalse(spy.called);
+        });
+
+        test('Does not fire events for missing object', function() {
+          var spy = sinon.spy();
+          element.addEventListener('variable-update-action', spy);
+          element._notifyVariablesChange();
+          assert.isFalse(spy.called);
+        });
+      });
+
+      suite('_beforeProcessVariables()', function() {
+        var result;
+        setup(function(done) {
+          element = fixture('basic')[0];
+          element._beforeRequest = function(data) {
+            result = data;
+            done();
+          };
+          element._beforeProcessVariables(request);
+        });
+        test('Processes all variables', function() {
+          assert.equal(result.url, 'https://domain.com/value1');
+          assert.equal(result.headers, 'content-length: 0\nx-test: true\nx-var: value2 value1');
+          assert.equal(result.payload, 'value1');
+        });
       });
     });
     </script>
